deployment/mongodb.yml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb
  namespace: kube-system
spec:
  hostNetwork: true
  containers:
    - name: mongodb
      image: 10.39.101.226:5000/mongo
      ports:
        - containerPort: 27017
          hostPort: 27017
      volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-conf
  volumes:
    - name: nginx-conf
      hostPath:
        path: /k8s-test/deployment/nginx.conf
  nodeSelector:
    nodeName: caocentos7
