deployment/nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
  namespace: kube-system
spec:
  hostNetwork: true
  containers:
    - name: nginx
      image: 10.39.101.226:5000/nginx
      ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 8008
          hostPort: 8008          
      volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-conf
  volumes:
    - name: nginx-conf
      hostPath:
        path: /k8s-test/deployment/nginx.conf
  nodeSelector:
    nodeName: caocentos7
