deployment/busybox.yml
apiVersion: v1
kind: Service
metadata:
  name: busybox
spec:
  type: NodePort
  ports:
  - port: 3600
    nodePort: 30036
    targetPort: 3600
  selector:
    app: busybox

---
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: busybox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: busybox
  strategy:
    type: Recreate
  template:
    metadata:
      name: busybox
      labels:
        app: busybox
    spec:
      hostNetwork: false
      containers:
      - image: 10.39.101.226:5000/mybusybox
        command:
          - sleep
          - "3600"
        imagePullPolicy: IfNotPresent
        name: busybox
      restartPolicy: Always
