deployment/test.yml
apiVersion: v1
kind: Service
metadata:
  name: test1
  namespace: test  
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: test1

---
apiVersion: v1
kind: Service
metadata:
  name: test2
  namespace: test
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: test2

---
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: test1
  namespace: test 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test1
  strategy:
    type: Recreate
  template:
    metadata:
      name: test1
      labels:
        app: test1
    spec:
      hostNetwork: false
      containers:
      - image: 10.39.101.226:5000/k8s-test:1.0
        name: test1
        ports:
        - containerPort: 3000 

---
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: test2
  namespace: test 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test2
  strategy:
    type: Recreate
  template:
    metadata:
      name: test2
      labels:
        app: test2
    spec:
      hostNetwork: false
      containers:
      - image: 10.39.101.226:5000/k8s-test:1.0
        name: test2
        ports:
        - containerPort: 3000
